--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/jasmine": "~3.6.0",
     "@types/leaflet": "^1.7.2",
     "@types/node": "^12.11.1",
