--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "./node_modules/leaflet/dist/leaflet.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
-            "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.min.js"]
+            "scripts": [
+              "node_modules/@fortawesome/fontawesome-free/js/all.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -124,6 +126,10 @@
               "devServerTarget": "leaflet:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
